# scripts

./: .gitignore  Cargo.toml  readme.md  t.sql
cherry-pick-scanner/: .gitignore  README.md  cherry_pick_scanner.py  requirements.txt
gcp_benchmark/: env_setup.sh  gcp-benchmark-ycsb.sh  gcp_benchmark_ycsb.sh  gcp_setup.sh  go.mod  sysbench-point-select.sh  tidb_future_ts.go  tidb_future_ts_benchmark.go  validate-ts.py
gcp_benchmark/archive/: env_setup.sh  sysbench-point-select.sh  tidb_future_ts_benchmark.go
gcp_benchmark/archive/bench-autocommit/src/: lib.rs  main.rs
gcp_benchmark/bench-autocommit/: Cargo.toml  benchmark_results_20241126_192213.csv  benchmark_results_20241126_192844.csv  benchmark_results_20241126_193140.csv  benchmark_results_20241126_193602.csv  benchmark_results_20241126_193813.csv  benchmark_results_20241126_193956.csv  benchmark_results_20241126_194933.csv
gcp_benchmark/bench-autocommit/src/: main.rs  workloads.rs
gcp_benchmark/nextgen/: deploy_cdc_correctness.sh  deploy_nextgen_cluster.sh  fix_s3_bucket.sh  start_tikv_worker.sh  sysbench.conf  tikv_worker_config.toml.template
src/: analyze.py  error.rs  lib.rs  main.rs  p-dml-bench.py  tests.py  workload.rs
src/p-dml-bench/: analyze.py  digiplus.template  p-dml-bench.py  tests.py  tidb-lightning.toml
test_grpc_compression/: main.py  tikv_deflate.toml  tikv_gzip.toml
ttl_benchmark/: README_TTL_Benchmark.md  tidb_ttl_benchmark.py
