[package]
name = "dmlddl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "0.7", features = ["runtime-tokio-native-tls", "mysql"]}
tokio = {version = "1", features = ["full", "tracing"]}
futures-core = "0.3"
futures-util = "0.3"
futures = "0.3"
clap = "4"
slog = "2"
slog-async = "2"
slog-term = "2"
thiserror = "1"
ctrlc = "3"
rand = {version = "0.8", features = ["small_rng"]}
simple-logging = "2"
log = "0.4"
simple_logger = "5"

[[bin]]
name = "million-writer"
path = "src/bin/million_writer.rs"
