[package]
name = "bench-autocommit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
structopt = "0.3"
statistical = "1.0"
chrono = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
sqlx = { version = "0.8", features = [ "mysql", "runtime-tokio-native-tls" ] }